# spo-lab-3

./: .gitignore  CMakeLists.txt  README.md
src/: common.c  common.h  main.c  net.c  net.h
src/client/: client_main.c  client_main.h  events.c  events.h  ui.c  ui.h
src/server/: server_main.c  server_main.h
